--- a/index.html
+++ b/index.html
@@ -376,14 +376,14 @@
         </div>
 
         <form id="contact-form">
-            <input type="hidden" name="contact_number">
+            <input type="hidden" name="contact_number" required>
             <label>Vardas</label>
-            <input type="text" name="user_name">
+            <input type="text" name="user_name" required>
             <label>El.paštas</label>
-            <input type="email" name="user_email">
+            <input type="email" name="user_email" required>
             <label>Žinutė</label>
-            <textarea name="message"></textarea>
-            <input type="submit" value="Send">
+            <textarea name="message" required></textarea>
+            <input type="submit" value="send">
         </form>
 
 
